--- a/index.html
+++ b/index.html
@@ -5,10 +5,13 @@
     <meta name="theme-color" content="white" />
     <link rel="manifest" href="/manifest.json">
     <link rel="apple-touch-icon" href="/icon.png">
-    <title>CEH questions</title>
+    <title>Exam questions</title>
     <style>
       * {
         font-family: Arial, sans-serif;
+      }
+      body {
+        height: 100%;
       }
       div.hidden {
         display: none
@@ -64,207 +67,194 @@
       }
     </style>
     <script>
-    var develVar = "";
-    var initializing = true;
-    var showAllQuestions = false;
+      function getStorage(name) {
+        var output = JSON.parse(window.localStorage.getItem(name));
+        if (output != null) {
+          return output;
+        }
+        if (name == "status") {
+          return [0,0];
+        } else {
+          return [];
+        }
+      }
 
-    //PWA handing
-    if ('serviceWorker' in navigator) {
-      window.addEventListener('load', function() {
-        navigator.serviceWorker.register('/sw.js').then(function(registration) {
-          // Registration was successful
-          console.log('ServiceWorker registration successful with scope: ', registration.scope);
-        }, function(err) {
-          // registration failed :(
-          console.log('ServiceWorker registration failed: ', err);
+      function setStorage(name, value) {
+        window.localStorage.setItem(name, JSON.stringify(value));
+        console.log("written: "+name);
+      }
+
+      var develVar = "";
+      var initializing = true;
+      var showAllQuestions = false;
+      var showAllControls = false;
+      var data = getStorage("data");
+
+      //PWA handing
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', function() {
+          navigator.serviceWorker.register('/sw.js').then(function(registration) {
+            // Registration was successful
+            console.log('ServiceWorker registration successful with scope: ', registration.scope);
+          }, function(err) {
+            // registration failed :(
+            console.log('ServiceWorker registration failed: ', err);
+          });
         });
-      });
-    }
-
-    var data = JSON.parse(window.localStorage.getItem("data"));
-    if (data == null) {
-      data = [];
-    }
-
-    function populateQuestions() {
-      var files = document.getElementById('files').files;
-      if (!files.length) {
-        alert('Please select one file!');
-        return;
       }
-      var reader = new FileReader();
-      reader.onloadend = function(evt) {
-        if (evt.target.readyState == FileReader.DONE) { // DONE == 2
-          console.log(evt.target.result);
-          data = JSON.parse(evt.target.result);
-          window.localStorage.setItem("data",JSON.stringify(data));
-          displayQuestions();
+
+      function refreshCache() {
+        caches.delete('Exam-questions').then(function(deleted) {
+          if (!deleted) {
+            alert("Cache not found");
+          }
+          location.reload();
+        });
+      }
+
+      function toggleControlsShow() {
+        if (showAllControls) {
+          document.getElementById('allControls').style.display='none';
+        } else {
+          document.getElementById('allControls').style.display='block';
         }
-      };
-      reader.readAsText(files[0]);
-    }
+        showAllControls=!showAllControls;
+      }
 
-    function getCookie(cname) {
-      var name = cname + "=";
-      var ca = document.cookie.split(';');
-      for(var i = 0; i < ca.length; i++) {
-        var c = ca[i];
-        while (c.charAt(0) == ' ') {
-          c = c.substring(1);
+      function downloadAsFile(name) {
+        var element = document.createElement('a');
+        element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(window.localStorage.getItem(name)));
+        element.setAttribute('download', name+'.json');
+        element.style.display = 'none';
+        document.body.appendChild(element);
+        element.click();
+        document.body.removeChild(element);
+      }
+
+      function uploadFile(name) {
+        var files = document.getElementById('files').files;
+        if (!files.length) {
+          alert('Please select one file!');
+          return;
         }
-        if (c.indexOf(name) == 0) {
-          return c.substring(name.length, c.length);
+        var reader = new FileReader();
+        reader.onloadend = function(evt) {
+          if (evt.target.readyState == FileReader.DONE) {
+            fileContents = JSON.parse(evt.target.result); // Check we can parse the JSON
+            setStorage(name, fileContents);
+            if (name == "data") {
+              data = fileContents;
+            }
+            displayQuestions();
+          }
+        };
+        reader.readAsText(files[0]);
+      }
+
+      function resetQuestions() {
+        if (!confirm("If you continue, your progress will be completely lost. Are you sure?")) {
+          return;
         }
+        window.localStorage.removeItem("status");
+        window.localStorage.removeItem("list");
+        window.localStorage.removeItem("data");
+        location.reload();
       }
-      return "0@0";
-    }
 
-    function setCookie(cname, cvalue) {
-      var exdays = 30;
-      var d = new Date();
-      d.setTime(d.getTime() + (exdays * 24 * 60 * 60 * 1000));
-      document.cookie = cname + "=" + cvalue + ";expires="+d.toUTCString();
-    }
+      function addToCookie(questionId, answer, correct) {
+        var list = getStorage("list")
+        var status = getStorage("status");
+        if (correct) { 
+          status[0]++;
+        } else {
+          status[1]++;
+        }
+        list[questionId] = answer;
+        setStorage("list", list);
+        setStorage("status", status);
+        showCounts();
+      }
 
-    function downloadAsFile(name) {
-      var element = document.createElement('a');
-      element.setAttribute('href', 'data:text/plain;charset=utf-8,' + encodeURIComponent(window.localStorage.getItem(name)));
-      element.setAttribute('download', name+'.json');
-
-      element.style.display = 'none';
-      document.body.appendChild(element);
-
-      element.click();
-
-      document.body.removeChild(element);
-    }
-
-    function resetQuestions() {
-      if (!confirm("If you continue, your progress will be completely lost. Are you sure?")) {
-        return;
-      }
-      setCookie("status", "");
-      setCookie("list", "");
-      window.localStorage.removeItem("data");
-      location.reload();
-    }
-
-    function addToCookie(newAnswer, correct) {
-      var list = getCookie("list");
-      var status = getCookie("status");
-      if (status == "") {
-        status = ["0", "0"];
-      } else {
-        status = status.split('@');
-      }
-      var correctAnswers = status[0];
-      var wrongAnswers = status[1];
-      if (correct) { 
-        correctAnswers++;
-      } else {
-        wrongAnswers++;
-      }
-      list += '#' + newAnswer;
-      setCookie("list", list);
-      setCookie("status", correctAnswers.toString() + '@' + wrongAnswers.toString());
-      window.localStorage.setItem("status",JSON.stringify([correctAnswers, wrongAnswers]));
-      var tempList = list.split('#');
-      var storageList = [];
-      for (var i = 1; i < tempList.length; i++) {
-        var currentAnswer = tempList[i].split('*')
-        storageList[currentAnswer[0]] = currentAnswer[1];
-      }
-      window.localStorage.setItem("list",JSON.stringify(storageList));
-      showCounts();
-    }
-
-    function showCounts() {
-      var status = getCookie("status");
-      if (status == "") {
-        status = ["0", "0"];
-      } else {
-        status = status.split('@');
-      }
-      document.getElementById('correctCount').innerHTML = status[0].toString();
-      document.getElementById('wrongCount').innerHTML = status[1].toString();
-      if (data.length == 0 || showAllQuestions) {
-        return;
-      }
-      console.log(data);
-      var currentQuestion = parseInt(status[0])+parseInt(status[1]);
-      document.querySelector('[questionId="'+currentQuestion.toString()+'"]').classList.remove("hidden");
-      if (currentQuestion > 1) {
-        document.querySelector('[questionId="'+(currentQuestion -2).toString()+'"]').classList.add("hidden");
-      }
-    }
-
-    function buttonSubmit() {
-      var questionNode = this.parentElement.parentElement;
-      var questionId=questionNode.getAttribute("questionId");
-      var correct = data[questionId].answer == this.getAttribute("answer");
-      if (!initializing) {
-        addToCookie(questionId + "*" + this.getAttribute("answer"), correct);
-      }
-      if (correct) {
-        this.classList.add("correctAnswer");
-      } else {
-        this.classList.add("wrongAnswer");
-      }
-      var buttons = questionNode.querySelectorAll("button");
-      for (var i = 0; i < buttons.length; i++) {
-        buttons[i].setAttribute("disabled", "true");
-        if (data[questionId].answer == buttons[i].getAttribute("answer")) {
-          buttons[i].classList.add("correctAnswer");
+      function showCounts() {
+        var status = getStorage("status");
+        document.getElementById('correctCount').innerHTML = status[0].toString();
+        document.getElementById('wrongCount').innerHTML = status[1].toString();
+        if (data.length == 0 || showAllQuestions) {
+          return;
+        }
+        var currentQuestion = status[0]+status[1];
+        document.querySelector('[questionId="'+currentQuestion.toString()+'"]').classList.remove("hidden");
+        if (currentQuestion > 1) {
+          document.querySelector('[questionId="'+(currentQuestion -2).toString()+'"]').classList.add("hidden");
         }
       }
-      if (data[questionId].explanation != "") {
-        var explanation = document.createElement("p");
-        explanation.appendChild(document.createTextNode(data[questionId].explanation));
-        questionNode.appendChild(explanation);
-      }
-      if (data[questionId].references != "") {
-        var references = document.createElement("p");
-        references.appendChild(document.createTextNode(data[questionId].references));
-        questionNode.appendChild(references);
-      }
-    }
 
-    function displayQuestions() {
-      var mainDiv = document.getElementById("main");
-      initializing = true;
-      mainDiv.innerHTML = "";
-      mainDiv.style.marginTop = (document.getElementsByTagName("header")[0].offsetHeight+15).toString()+"px";
-      for (var i = 0; i < data.length; i++) {
-        var singleNode = document.createElement("div");
-        var question = document.createElement("p");
-        question.appendChild(document.createTextNode(i.toString() + ". " + data[i].question));
-        var possibilities = document.createElement("div");
-        lines = data[i].possibilities.split('\n');
-        for (var j = 0; j < lines.length; j++) {
-          var radio = document.createElement("button");
-          radio.setAttribute("answer", String.fromCharCode(65+j));
-          radio.onclick = buttonSubmit;
-          radio.appendChild(document.createTextNode(lines[j]));
-          possibilities.appendChild(radio);
+      function buttonSubmit() {
+        var questionNode = this.parentElement.parentElement;
+        var questionId=questionNode.getAttribute("questionId");
+        var correct = data[questionId].answer == this.getAttribute("answer");
+        if (!initializing) {
+          addToCookie(questionId, this.getAttribute("answer"), correct);
         }
-        singleNode.setAttribute("class", "question");
-        singleNode.setAttribute("questionId", i);
-        singleNode.appendChild(question);
-        singleNode.appendChild(possibilities);
-        if (!showAllQuestions) {
-          singleNode.classList.add("hidden");
+        if (correct) {
+          this.classList.add("correctAnswer");
+        } else {
+          this.classList.add("wrongAnswer");
         }
-        mainDiv.appendChild(singleNode);
+        var buttons = questionNode.querySelectorAll("button");
+        for (var i = 0; i < buttons.length; i++) {
+          buttons[i].setAttribute("disabled", "true");
+          if (data[questionId].answer == buttons[i].getAttribute("answer")) {
+            buttons[i].classList.add("correctAnswer");
+          }
+        }
+        if (data[questionId].explanation != "") {
+          var explanation = document.createElement("p");
+          explanation.appendChild(document.createTextNode(data[questionId].explanation));
+          questionNode.appendChild(explanation);
+        }
+        if (data[questionId].references != "") {
+          var references = document.createElement("p");
+          references.appendChild(document.createTextNode(data[questionId].references));
+          questionNode.appendChild(references);
+        }
       }
-      var answerList = getCookie("list").split('#');
-      for (var i = 1; i < answerList.length; i++) {
-        var answerParts = answerList[i].split('*');
-        var singleNode = document.querySelector('[questionId="'+answerParts[0]+'"');
-        singleNode.querySelector('[answer="'+answerParts[1]+'"').click();
+
+      function displayQuestions() {
+        var mainDiv = document.getElementById("main");
+        initializing = true;
+        mainDiv.innerHTML = "";
+        mainDiv.style.marginTop = (document.getElementsByTagName("header")[0].offsetHeight+15).toString()+"px";
+        for (var i = 0; i < data.length; i++) {
+          var singleNode = document.createElement("div");
+          var question = document.createElement("p");
+          question.appendChild(document.createTextNode(i.toString() + ". " + data[i].question));
+          var possibilities = document.createElement("div");
+          lines = data[i].possibilities.split('\n');
+          for (var j = 0; j < lines.length; j++) {
+            var radio = document.createElement("button");
+            radio.setAttribute("answer", String.fromCharCode(65+j));
+            radio.onclick = buttonSubmit;
+            radio.appendChild(document.createTextNode(lines[j]));
+            possibilities.appendChild(radio);
+          }
+          singleNode.setAttribute("class", "question");
+          singleNode.setAttribute("questionId", i);
+          singleNode.appendChild(question);
+          singleNode.appendChild(possibilities);
+          if (!showAllQuestions) {
+            singleNode.classList.add("hidden");
+          }
+          mainDiv.appendChild(singleNode);
+        }
+        var answerList = getStorage("list");
+        for (var i = 0; i < answerList.length; i++) {
+          var singleNode = document.querySelector('[questionId="'+i.toString()+'"');
+          singleNode.querySelector('[answer="'+answerList[i]+'"').click();
+        }
+        showCounts();
+        initializing = false;
       }
-      showCounts();
-      initializing = false;
-    }
     </script>
   </head>
   <body onload="displayQuestions()">
@@ -272,15 +262,19 @@
       <p>
         Correct: <span id="correctCount">0</span>
         Wrong: <span id="wrongCount">0</span>
-        <button onclick="resetQuestions()">Reset questions</button>
-        <button onclick="showAllQuestions=!showAllQuestions;displayQuestions()">Show all</button>
+        <button onclick="toggleControlsShow()">Toggle controls</button>
+      </p>
+      <p id="allControls" style="display: none">
         <select id="fileSelect">
           <option value="data">Data</option>
           <option value="list">List</option>
           <option value="status">Status</option>
         </select>
-        <input type="file" id="files" name="file" oninput="populateQuestions()" />
+        <input type="file" id="files" name="file" oninput="uploadFile(document.getElementById('fileSelect').value)" />
         <button onclick="downloadAsFile(document.getElementById('fileSelect').value)">Backup</button>
+        <button onclick="refreshCache()">Refresh cache</button>
+        <button onclick="resetQuestions()">Reset questions</button>
+        <button onclick="showAllQuestions=!showAllQuestions;displayQuestions()">Show all questions</button>
       </p>
     </header>
     <div id=main>
