--- a/index.html
+++ b/index.html
@@ -217,6 +217,15 @@
         location.reload();
       }
 
+      function resetAnswers() {
+        if (!confirm("If you continue, your progress will be completely lost (questions will remain). Are you sure?")) {
+          return;
+        }
+        singleton.list = [];
+        saveStorage();
+        location.reload();
+      }
+
       function answerQuestion(questionId, answer) {
         if (singleton.data[questionId].answer == answer) { 
           place.correct++;
@@ -423,6 +432,7 @@
         <button onclick="downloadAsFile()">Backup</button>
         <button onclick="refreshCache()">Refresh cache</button>
         <button onclick="resetQuestions()">Reset questions</button>
+        <button onclick="resetAnswers()">Reset answers</button>
         <button onclick="toggleQuestionsShow()">Show all questions</button>
         <button onclick="toggleEditMode()">Edit mode</button>
         <button onclick="removeQuestion()">Remove current question</button>
