--- a/index.html
+++ b/index.html
@@ -16,23 +16,6 @@
       div.hidden {
         display: none
       }
-      .question {
-        display: block;
-        border: 1px solid black;
-        padding: 10px;
-        margin: 10px;
-      }
-      .editQuestion > * {
-        display: block;
-        width: 90%;
-        margin-left: auto;
-        margin-right: auto;
-        margin-top: 5px;
-        margin-bottom: 5px;
-      }
-      .editQuestion textarea {
-        height: 100px;
-      }
       button {
         margin: 5px;
         background-color: white;
@@ -53,6 +36,37 @@
         color: white;
         cursor: default;
       }
+      header {
+        position: fixed;
+        background-color: white;
+        top: 0;
+        right: 0;
+        width: 100%;
+        box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
+      }
+      header button {
+        padding: 5px 8px;
+      }
+      header p {
+        margin: 10px 30px;
+      }
+      .question {
+        display: block;
+        border: 1px solid black;
+        padding: 10px;
+        margin: 10px;
+      }
+      .editQuestion > * {
+        display: block;
+        width: 90%;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 5px;
+        margin-bottom: 5px;
+      }
+      .editQuestion textarea {
+        height: 100px;
+      }
       button.correctAnswer {
         background-color: #4CAF50; /* Green */
       }
@@ -70,20 +84,6 @@
         white-space: -o-pre-wrap;
         word-wrap: break-word;
       }
-      header {
-        position: fixed;
-        background-color: white;
-        top: 0;
-        right: 0;
-        width: 100%;
-        box-shadow: 0 8px 8px 0 rgba(0, 0, 0, 0.2);
-      }
-      header button {
-        padding: 5px 8px;
-      }
-      header p {
-        margin: 10px 30px;
-      }
       #navigation, .navigation input {
         text-align: center;
       }
@@ -94,20 +94,8 @@
     </style>
     <script>
       "use strict";
-      var singleton = {
-        'data': [], //Data stores questions
-        'list': [], //List stores the selected answer
-      };
-      var place = {
-        'current': 0,
-        'correct': 0,
-        'failed': 0,
-        'editMode': false,
-        'showAllQuestions': false,
-        'showAllControls': false
-      };
-      var develVar = "";
-      var initializing = true;
+      var singleton;
+      var place;
 
       function reloadStorage() {
         var output = JSON.parse(window.localStorage.getItem("singleton"));
@@ -122,7 +110,10 @@
         place = {
           'current': 0,
           'correct': 0,
-          'failed': 0
+          'failed': 0,
+          'editMode': false,
+          'showAllQuestions': false,
+          'showAllControls': false
         };
         var list = singleton.list;
         var data = singleton.data;
@@ -141,7 +132,6 @@
 
       function saveStorage() {
         window.localStorage.setItem("singleton", JSON.stringify(singleton));
-        console.log("written: storage");
       }
 
       //PWA handing
@@ -166,6 +156,7 @@
         });
       }
 
+      // Header functions
       function toggleControlsShow() {
         place.showAllControls=!place.showAllControls;
         refreshControls();
@@ -226,17 +217,6 @@
         location.reload();
       }
 
-      function answerQuestion(questionId, answer) {
-        if (singleton.data[questionId].answer == answer) { 
-          place.correct++;
-        } else {
-          place.failed++;
-        }
-        singleton.list[questionId] = answer;
-        saveStorage();
-        refreshPage();
-      }
-
       function removeQuestion() {
         var questionId = place.current;
         if (!confirm("If you continue, this question will be deleted forever and you won't be able to undo")) {
@@ -251,8 +231,16 @@
         refreshPage();
       }
 
-      function buttonSubmit() {
-        answerQuestion(this.parentElement.parentElement.getAttribute("questionId"), this.getAttribute("answer"));
+      // Q&A functions
+      function answerQuestion(questionId, answer) {
+        if (singleton.data[questionId].answer == answer) { 
+          place.correct++;
+        } else {
+          place.failed++;
+        }
+        singleton.list[questionId] = answer;
+        saveStorage();
+        refreshPage();
       }
 
       function showQuestion(mainDiv, questionId) {
@@ -266,7 +254,9 @@
         for (var j = 0; j < lines.length; j++) {
           var button = document.createElement("button");
           button.setAttribute("answer", String.fromCharCode(65+j));
-          button.onclick = buttonSubmit;
+          button.onclick = function() {
+            answerQuestion(this.parentElement.parentElement.getAttribute("questionId"), this.getAttribute("answer"));
+          };
           button.appendChild(document.createTextNode(lines[j]));
           buttons[j] = button;
           possibilities.appendChild(button);
@@ -284,7 +274,6 @@
               buttons[i].classList.add("wrongAnswer");
             }
           }
-
           if (singleton.data[questionId].explanation != "") {
             var explanation = document.createElement("pre");
             explanation.appendChild(document.createTextNode(singleton.data[questionId].explanation));
@@ -381,6 +370,7 @@
         document.getElementById('wrongCount').innerHTML = place.failed.toString();
       }
 
+      //Navigation
       function changeCurrentQuestion(newQuestionId) {
         if (newQuestionId >= singleton.data.length || newQuestionId < 0) {
           console.log("Question out of range");
